--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /* your code */
+.table {
+	width: 100%;
+	border-collapse: collapse;
+}
+.table thead th{
+	text-align: left;
+	padding: 12px;
+	background: #215a8e;
+	color: #fff;
+}
+.table thead th:first-child {
+	border-top-left-radius: 10px
+}
+.table thead th:last-child {
+	border-top-right-radius: 10px
+}
+.table tbody td {
+	padding: 12px;
+}
+.table tbody tr:nth-child(even) {
+	background: #dddddd;
+}
+.table tbody tr:last-child td:first-child {
+	border-bottom-left-radius: 10px;
+}
+.table tbody tr:last-child td:last-child {
+	border-bottom-right-radius: 10px;
+}
